[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/UI/menumain.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/backbutton.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/button.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/moneyplace.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/coin.png" type="Texture" id=5]
[ext_resource path="res://Scripts/UI/BackButton.gd" type="Script" id=7]
[ext_resource path="res://Sprites/UI/crystal.png" type="Texture" id=8]
[ext_resource path="res://Fonts/ThaleahFat.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scripts/Scenes/ShopScene.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="Main" type="Node2D"]
script = ExtResource( 10 )

[node name="MenuMain" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1081.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 320.0
margin_right = 448.0
margin_bottom = 400.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 448.0
margin_right = 448.0
margin_bottom = 528.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton4" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 576.0
margin_right = 448.0
margin_bottom = 656.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton5" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 704.0
margin_right = 448.0
margin_bottom = 784.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyPanel" type="TextureRect" parent="."]
margin_left = 1496.0
margin_right = 1921.0
margin_bottom = 59.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MoneyPanel"]
margin_left = 16.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 48.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="MoneyPanel"]
margin_left = 280.0
margin_top = 4.0
margin_right = 296.0
margin_bottom = 52.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="MoneyPanel"]
margin_left = 64.0
margin_right = 232.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "10"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrystalLabel" type="Label" parent="MoneyPanel"]
margin_left = 304.0
margin_right = 416.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 640.0
margin_top = 192.0
margin_right = 1920.0
margin_bottom = 984.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VBoxContainer" parent="ScrollContainer"]
custom_constants/separation = 95
[connection signal="pressed" from="BackButton" to="BackButton" method="_on_BackButton_pressed"]
